--- a/online-store/public/globals.css
+++ b/online-store/public/globals.css
@@ -316,3 +316,9 @@ body {
   margin: 100px auto;
   box-shadow: 0 0 5px #ccc;
 }
+
+.shadow-border {
+  -webkit-box-shadow: 0px 0px 13px -6px rgba(66, 68, 90, 1);
+  -moz-box-shadow: 0px 0px 13px -6px rgba(66, 68, 90, 1);
+  box-shadow: 0px 0px 13px -6px rgba(66, 68, 90, 1);
+}
